--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "yiisoft/yii2": "~2.0.0"
+        "yiisoft/yii2": "~2.0.0",
+        "rmrevin/yii2-fontawesome": "~3.5"
     },
     "autoload": {
         "psr-4": {
